--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,20 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:padding="16dp">
 
 
     <Button
         android:id="@+id/showToastButton"
-        android:layout_width="124dp"
-        android:layout_height="65dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="121dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="418dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="41dp"
         android:text="@string/show_toast" />
+
+    <EditText
+        android:id="@+id/etWriteMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/showToastButton"
+        android:layout_marginTop="55dp"
+        android:ems="10"
+        android:hint="Write your Message"
+        android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/btnSendMTAA"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="37dp"
+        android:layout_marginEnd="59dp"
+        android:layout_marginBottom="244dp"
+        android:text="Send Message to another activity" />
 </RelativeLayout>
