--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:orientation="vertical"
     android:padding="16dp">
 
 
     <Button
         android:id="@+id/showToastButton"
-        android:layout_width="wrap_content"
+        android:layout_width="305dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="41dp"
         android:text="@string/show_toast" />
 
     <EditText
+        android:layout_marginBottom="16dp"
         android:id="@+id/etWriteMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/showToastButton"
         android:layout_marginTop="55dp"
         android:ems="10"
         android:hint="Write your Message"
@@ -33,11 +31,15 @@
         android:id="@+id/btnSendMTAA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="37dp"
-        android:layout_marginEnd="59dp"
-        android:layout_marginBottom="244dp"
+        android:layout_marginBottom="16dp"
+
         android:text="Send Message to another activity" />
-</RelativeLayout>
+
+    <Button
+        android:id="@+id/btnShareMsgToAnotherApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Share Message To another App" />
+
+
+</LinearLayout>
